--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "build": "tsc",
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint 'src/**/*.{ts,tsx}' --fix",
-     "prettier": "prettier --check .",
-    "prettier:fix": "prettier --write ."
+    "prettier": "prettier --check .",
+    "prettier:fix": "prettier --write .",
+    "swagger": "tsoa spec"
   },
   "keywords": [],
   "author": "",
@@ -22,7 +23,8 @@
     "express": "^4.19.2",
     "http-status-codes": "^2.3.0",
     "mysql2": "^3.10.2",
-    "sequelize": "^6.37.3"
+    "sequelize": "^6.37.3",
+    "tsoa": "^6.4.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
